# path_tracer

./: CMakeLists.txt  README.md  cornell_box.ppm
cpu_pathtracer/: CMakeLists.txt
cpu_pathtracer/include/: Color.h  Ray.h
cuda_pathtracer/: CMakeLists.txt
cuda_pathtracer/include/: Camera.cuh  Color.cuh  Error.cuh  ForwardDeclarations.cuh  ImplicitObject.cuh  Intersection.cuh  Material.cuh  MaterialFactory.cuh  Polygon.cuh  Random.cuh  Ray.cuh  ScatterRecord.cuh  Scene.cuh  Tetrahedron.cuh  Triangle.cuh  Vec3.cuh  Window.cuh  raytracer_kernel.cuh
cuda_pathtracer/src/: Camera.cu  HostRandom.cu  Random.cu  main.cu  raytracer_kernel.cu
include/: Camera.h  ImplicitObject.h  Intersection.h  Polygon.h  Random.h  Scene.h  Tetrahedron.h  Vec3.h  WindowX11.h
src/: main.cpp
